# search-p2p

./: .gitignore  README.md  pyproject.toml
docs/: apresentacao.html  simulador.html
docs/results/: circulant_3_12.csv  circulant_4_12.csv  ring_12.csv  topology.dot
examples/: circulant_3_12.json  circulant_4_12.json  queries.json  ring_12.json
p2p_search/: __init__.py  benchmark.py  cli.py  config.py  network.py  search.py  simulator.py
scripts/: demo_shell.py  draw_topology.py  run_experiments.sh
tests/: test_benchmark.py  test_config.py  test_search.py  test_simulator.py
