[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p2p-search"
version = "1.0.0"
description = "Simulador de algoritmos de busca em redes P2P nao estruturadas"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
p2p-search = "p2p_search.cli:main"

[tool.setuptools.packages.find]
include = ["p2p_search*"]

